[package]
name = "comprexor"
version = "0.1.4"
edition = "2021"
authors = ["OLoKo64 <reinaldorozatoj.11cg1@aleeas.com>"]
description = "A simple lib to compress and extract files and directories."
categories = ["encoding", "gzip", "deflate", "compress", "decompress", "tar"]
repository = "https://github.com/OLoKo64/comprexor"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.25"
humansize = "2.1.3"
rand = "0.8.5"
tar = "0.4.38"
